# src/main/java/com/github/cyberpunkperson/blank/configuration/cache/controller/CacheController.java
@@ -1,9 +1,9 @@
-package com.github.cyberpunkperson.blank.configuration.cache.controller;
+package com.github.cyberpunkperson.template.configuration.cache.controller;
 
-import com.github.cyberpunkperson.blank.cache.model.Entity;
-import com.github.cyberpunkperson.blank.cache.rest.CacheApiDelegate;
-import com.github.cyberpunkperson.blank.configuration.cache.operation.EvictAllCacheEntitiesOperation;
-import com.github.cyberpunkperson.blank.configuration.cache.operation.GetAllCacheEntitiesOperation;
+import com.github.cyberpunkperson.template.cache.model.Entity;
+import com.github.cyberpunkperson.template.cache.rest.CacheApiDelegate;
+import com.github.cyberpunkperson.template.configuration.cache.operation.EvictAllCacheEntitiesOperation;
+import com.github.cyberpunkperson.template.configuration.cache.operation.GetAllCacheEntitiesOperation;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import ru.tinkoff.eclair.annotation.Log;
@@ -20,15 +20,15 @@ public class CacheController implements CacheApiDelegate {
     private final GetAllCacheEntitiesOperation getAllCacheEntitiesOperation;
 
     @Override
-    @Log(INFO) //todo serverTime и TraceId
-    public ResponseEntity<Void> deleteAllEntities(String cacheName) {
+    @Log(INFO)
+    public ResponseEntity<Void> evictAllCacheEntities(String cacheName) {
         evictAllCacheEntitiesOperation.activate(cacheName);
         return ok().build();
     }
 
     @Override
     @Log(INFO)
-    public ResponseEntity<List<Entity>> getAllEntities(String cacheName) {
+    public ResponseEntity<List<Entity>> getAllCacheEntities(String cacheName) {
         return ok(getAllCacheEntitiesOperation.activate(cacheName));
     }
 }
