# src/main/resources/openapi/cache-v1.yaml
@@ -16,9 +16,9 @@ paths:
     get:
       tags:
         - cache
-      summary: getAllEntities
+      summary: getAllCacheEntities
       description: Return all cache entities
-      operationId: getAllEntities
+      operationId: getAllCacheEntities
       parameters:
         - in: path
           name: cacheName
@@ -31,10 +31,10 @@ paths:
         200:
           description: OK
           headers:
-            x-trace-id:
-              $ref: '#/components/headers/XTraceId'
-            x-server-time:
-              $ref: '#/components/headers/XServerTime'
+            traceId:
+              $ref: '#/components/headers/TraceId'
+            serverTime:
+              $ref: '#/components/headers/ServerTime'
           content:
             application/json:
               schema:
@@ -52,9 +52,9 @@ paths:
     delete:
       tags:
         - cache
-      summary: deleteAllEntities
-      description: Delete all cache entities
-      operationId: deleteAllEntities
+      summary: evictAllCacheEntities
+      description: Evict all cache entities
+      operationId: evictAllCacheEntities
       parameters:
         - in: path
           name: cacheName
@@ -67,10 +67,10 @@ paths:
         200:
           description: OK
           headers:
-            x-trace-id:
-              $ref: '#/components/headers/XTraceId'
-            x-server-time:
-              $ref: '#/components/headers/XServerTime'
+            traceId:
+              $ref: '#/components/headers/TraceId'
+            serverTime:
+              $ref: '#/components/headers/ServerTime'
         400:
           $ref: '#/components/responses/Error'
         401:
@@ -84,25 +84,25 @@ components:
 
   headers:
 
-    XTraceId:
+    TraceId:
       description: Trace response identifier
       schema:
         type: string
         minLength: 1
       required: true
 
-    XServerTime:
+    ServerTime:
       description: Server response timestamp
       schema:
         type: string
-        format: date-time
+        format: serverTime
       required: true
 
   parameters:
 
     TraceId:
       description: Trace response identifier
-      name: x-trace-id
+      name: traceId
       in: header
       required: true
       schema:
@@ -114,10 +114,10 @@ components:
     Error:
       description: Error
       headers:
-        x-trace-id:
-          $ref: '#/components/headers/XTraceId'
-        x-server-time:
-          $ref: '#/components/headers/XServerTime'
+        traceId:
+          $ref: '#/components/headers/TraceId'
+        serverTime:
+          $ref: '#/components/headers/ServerTime'
       content:
         application/json:
           schema:
